Store files in database instead of in a directory
